# qvadratuch_reh

./: CMakeLists.txt  README.md  quadratic_solver.cpp  quadratic_solver.h  test_quadratic_solver.cpp
